--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./web",
   "dependencies": {
     "@douyinfe/semi-icons": "^2.84.0",
     "@douyinfe/semi-ui": "^2.84.0",
@@ -14,18 +15,19 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.1",
-    "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "REACT_APP_ENV=development PORT=3000 REACT_APP_API_URL=http://localhost:7070 react-scripts start",
-    "start:dev": "REACT_APP_ENV=development PORT=3000 REACT_APP_API_URL=http://localhost:7070 react-scripts start",
-    "start:prod": "REACT_APP_ENV=production PORT=3000 REACT_APP_API_URL=https://your-production-api.com react-scripts start",
-    "build": "react-scripts build",
-    "build:dev": "REACT_APP_ENV=development REACT_APP_API_URL=http://localhost:7070 react-scripts build",
-    "build:prod": "REACT_APP_ENV=production REACT_APP_API_URL=https://your-production-api.com react-scripts build",
-    "test": "react-scripts test",
+    "start": "REACT_APP_ENV=development PORT=3000 REACT_APP_API_URL=http://localhost:7070 craco start",
+    "start:dev": "REACT_APP_ENV=development PORT=3000 REACT_APP_API_URL=http://localhost:7070 craco start",
+    "start:prod": "REACT_APP_ENV=production PORT=3000 craco start",
+    "build": "craco build",
+    "build:dev": "REACT_APP_ENV=development REACT_APP_API_URL=http://localhost:7070 craco build",
+    "build:prod": "REACT_APP_ENV=production craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@svgr/webpack": "^8.1.0"
   }
 }
